// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup render() can select a different item 1`] = `
<div
  name="radio"
  role="radiogroup"
>
  <RadioLineItem
    aria-checked={false}
    index={0}
    key="0"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice One
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={1}
    key="1"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice Two
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={true}
    index={2}
    key="2"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    >
      <RadioLineButtonFill
        animate={true}
      />
    </RadioLineButton>
    <RadioLineText>
      Choice Three
    </RadioLineText>
  </RadioLineItem>
</div>
`;

exports[`RadioGroup render() renders 1`] = `
<div
  name="radio"
  role="radiogroup"
>
  <RadioLineItem
    aria-checked={true}
    index={0}
    key="0"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    >
      <RadioLineButtonFill
        animate={true}
      />
    </RadioLineButton>
    <RadioLineText>
      Choice One
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={1}
    key="1"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice Two
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={2}
    key="2"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice Three
    </RadioLineText>
  </RadioLineItem>
</div>
`;

exports[`RadioGroup render() renders disabled 1`] = `
<RadioGroup
  choices={
    Array [
      Array [
        "choice_one",
        "Choice One",
      ],
    ]
  }
  disabled={true}
  name="radio"
  value="choice_one"
>
  <div
    name="radio"
    role="radiogroup"
  >
    <RadioLineItem
      aria-checked={true}
      disabled={true}
      index={0}
      key="0"
      onClick={[Function]}
      role="radio"
    >
      <div
        aria-checked={true}
        className="css-1ujnufh-RadioLineItem eeb3g7x1"
        onClick={[Function]}
        role="radio"
      >
        <RadioLineButton
          disabled={true}
          type="button"
        >
          <button
            className="css-1ovwgkh-RadioLineButton eeb3g7x0"
            disabled={true}
            type="button"
          >
            <RadioLineButtonFill
              animate={true}
              disabled={true}
            >
              <div
                className="css-14bkqla-RadioLineButtonFill eeb3g7x2"
              />
            </RadioLineButtonFill>
          </button>
        </RadioLineButton>
        <RadioLineText
          disabled={true}
        >
          <div
            className="css-fr9tlv-RadioLineText eeb3g7x3"
          >
            Choice One
          </div>
        </RadioLineText>
      </div>
    </RadioLineItem>
  </div>
</RadioGroup>
`;
